# fhirlesson33

./: .gitignore  QuestionnaireResponse.ipynb  README.md  getrequests.http  main.py  pyproject.toml
sdc-app/: app.py  main.py  pyproject.toml
sdc-app/forms/: Form-to-Capture-Medication-and-Food-Allergies.R4.json  History-of-Tobacco-use.R4.json  Smoking-Status.R4.json
sdc-app/static/: index.html
